fix(tab): more edge case squashing

--- a/src/components/tabs/styles/tab.css
+++ b/src/components/tabs/styles/tab.css
@@ -8,11 +8,17 @@
 }
 
 .tab:focus {
-  background-color: aqua;
+  outline: none;
+  box-shadow: 0 0 2px 1px rgb(72, 72, 72);
 }
 
 .active {
-  background-color: red;
+  box-shadow: inset 0 0 3px 2px orange;
+}
+
+.active:focus {
+  outline: none;
+  box-shadow: inset 0 0 3px 2px orange, 0 0 2px 1px rgb(72, 72, 72);
 }
 
 .tab__link {
